%%{init: {"theme": "base", "themeVariables": {"fontFamily": "Arial", "fontSize": "20px", "primaryColor": "#eaf6ff", "primaryBorderColor": "#1f6f9f", "lineColor": "#4b5563"}}}%%
classDiagram
    direction LR

    class Utilisateur {
        +String id
        +String email
        +String matricule
        +String nom
        +String prenom
        +Role role
        +DateTime derniereConnexion
        +seConnecter()
        +modifierProfil()
    }

    class Eleve {
        +Date dateNaissance
        +consulterDocuments()
        +demanderReleve()
        +demanderDuplicata()
        +prendreRendezVous()
        +effectuerPaiement()
    }

    class Administrateur {
        +String nomService
        +String organisme
        +String region
        +importerEleves()
        +publierDocument()
        +traiterDuplicata()
        +confirmerRetraitAntenne()
    }

    class AgentCentreExamen {
        +String centreExamen
        +consulterRendezVousTransmis()
        +confirmerRetraitEffectue()
    }

    class Organisme {
        +String id
        +String nom
    }

    class AntenneRegionale {
        +String id
        +String region
        +String ville
    }

    class CentreExamen {
        +String id
        +String nom
        +String region
    }

    class ExamenValide {
        +DiplomePrincipal diplomeType
        +Int anneeSession
        +String centreExamen
        +String regionComposition
    }

    class DocumentAcademique {
        +String id
        +TypeDocument typeDocument
        +DiplomePrincipal diplomeType
        +StatutDocument statut
        +String lieuRetrait
        +rendreDisponible()
        +verifierStatut()
        +marquerRetire()
    }

    class Releve {
        +String nomReleve
        +String instruction
        +faireDemandeReleve()
    }

    class Duplicata {
        +String nomDuplicata
        +String motif
        +String instruction
        +creerDemande()
        +verifierPaiement()
        +validerDuplicata()
    }

    class Diplome {
        +String nomDiplome
        +String instruction
        +Int anneeObtention
        +faireDemandeDiplome()
    }

    class RendezVous {
        +String id
        +Date dateRdv
        +String heureRdv
        +String lieu
        +StatutRendezVous statut
        +planifier()
        +annuler()
        +confirmerRetrait()
    }

    class Paiement {
        +String id
        +StatutPaiement statut
        +String modePaiement
        +initierPaiement()
        +confirmerPaiement()
        +annulerPaiement()
    }

    class Recu {
        +String numero
        +Float montant
        +DateTime dateEmission
        +generer()
    }

    class Notification {
        +String typeNotification
        +String message
        +StatutNotification statut
        +envoyer()
        +marquerCommeLue()
    }

    Utilisateur <|-- Eleve
    Utilisateur <|-- Administrateur
    Utilisateur <|-- AgentCentreExamen

    DocumentAcademique <|-- Releve
    DocumentAcademique <|-- Duplicata
    DocumentAcademique <|-- Diplome

    Organisme "1" --> "0..*" AntenneRegionale : possede
    Organisme "1" --> "0..*" Administrateur : rattache
    AntenneRegionale "1" --> "0..*" DocumentAcademique : retrait antenne
    CentreExamen "1" --> "0..*" AgentCentreExamen : affecte
    CentreExamen "1" --> "0..*" RendezVous : recoit RDV transmis

    Eleve "1" --> "0..*" ExamenValide : possede
    Eleve "1" --> "0..*" DocumentAcademique : demande
    Eleve "1" --> "0..*" RendezVous : prend
    Eleve "1" --> "0..*" Notification : recoit

    Administrateur "1" --> "0..*" DocumentAcademique : publie
    Administrateur "1" --> "0..*" RendezVous : planifie
    AgentCentreExamen "1" --> "0..*" RendezVous : confirme retrait

    DocumentAcademique "1" --> "0..*" RendezVous : retrait planifie
    Duplicata "1" --> "1" Paiement : exige
    Paiement "1" --> "0..*" Recu : produit
